--- a/src/app/serenazgo/serenos/versereno/versereno.component.css
+++ b/src/app/serenazgo/serenos/versereno/versereno.component.css
@@ -1,15 +1,13 @@
-.example-card {
-  max-width: 400px;
-}
-
-.example-header-image {
-  background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
-  background-size: cover;
-}
+/* Estilo predeterminado para todas las pantallas */
 
 .fle {
-  margin: 0 30vw;
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
 }
+
+.image {
+  max-width: 100%;
+  max-height: 300px;
+}
+
