--- a/src/app/serenazgo/serenos/versereno/versereno.component.html
+++ b/src/app/serenazgo/serenos/versereno/versereno.component.html
@@ -1,21 +1,17 @@
 <div class="fle">
-  <mat-card>
+  <mat-card class="card-size">
     <mat-card-header>
       <mat-card-title>{{ sereno.apellidos | uppercase }}</mat-card-title>
       <mat-card-subtitle> {{ sereno.nombre | uppercase }} </mat-card-subtitle>
     </mat-card-header>
-    <img
-      mat-card-image
-      src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-      alt="Photo of a Shiba Inu"
-    />
+    <img class="image" mat-card-image [src]="sereno.imagen ? 'assets/users/'+sereno.imagen : 'assets/users/user.png'" />
     <mat-card-content>
-      <p>
+      <p style="margin-top: 12px;">
         <strong>Nacimiento: </strong>
         {{
-          sereno.nacimiento
-            | date : "mediumDate" : "+0000" : "es-PE"
-            | titlecase
+        sereno.nacimiento
+        | date : "mediumDate" : "+0000" : "es-PE"
+        | titlecase
         }}
         ({{ sereno.edad }} años)
         <br />
@@ -28,19 +24,12 @@
         <strong>Direccion: </strong> {{ sereno.direccion }}
       </p>
     </mat-card-content>
-    <mat-card-actions>
-      <button
-        [routerLink]="['/serenazgo/serenos/list']"
-        mat-raised-button
-        color="warn"
-      >
+    <mat-card-actions align="end">
+      <button [routerLink]="['/serenazgo/serenos/list']" mat-raised-button color="warn">
         Regresar
       </button>
-      <button
-        [routerLink]="['/serenazgo/serenos/editar', sereno.id_sereno]"
-        mat-raised-button
-        color="primary"
-      >
+      <button style="margin-left: 6px;" [routerLink]="['/serenazgo/serenos/editar', sereno.id_sereno]" mat-raised-button
+        color="primary">
         Editar
       </button>
     </mat-card-actions>
