--- a/src/app/serenazgo/grupos/tabla/tabla.component.html
+++ b/src/app/serenazgo/grupos/tabla/tabla.component.html
@@ -24,18 +24,18 @@
         <td mat-cell *matCellDef="let element">{{ element.estado }}</td>
     </ng-container>
 
+    <!-- N° Serenos -->
+    <ng-container matColumnDef="num_sere">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>N° Serenos</th>
+        <td mat-cell *matCellDef="let element">{{element.num_sere}}</td>
+    </ng-container>
+
     <!-- Descripción -->
     <ng-container matColumnDef="descripcion">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Descripción</th>
         <td mat-cell *matCellDef="let element">{{ element.descripcion }}</td>
     </ng-container>
 
-    <!-- N° Serenos -->
-    <!-- TODO -->
-    <ng-container matColumnDef="num_ser">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>N° Serenos</th>
-        <td mat-cell *matCellDef="let element">0</td>
-    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columnas"></tr>
     <tr mat-row *matRowDef="let row; columns: columnas"></tr>
