create usuarios module

--- a/src/app/serenazgo/usuarios/home/home.component.html
+++ b/src/app/serenazgo/usuarios/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<p>
+    <mat-toolbar class="mat-flex">
+        <span>Usuarios del sistema</span>
+        <span>
+            <button matTooltip="Crear usuario" mat-raised-button color="primary" routerLink="">
+                <mat-icon>person_add</mat-icon> NUEVO
+            </button>
+        </span>
+    </mat-toolbar>
+</p>
+<router-outlet></router-outlet>
