--- a/src/app/serenazgo/user/profile/profile.component.css
+++ b/src/app/serenazgo/user/profile/profile.component.css
@@ -29,7 +29,7 @@
     flex-grow: 1;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 520px) {
     .child {
         flex-grow: 0;
         flex-basis: 95vw;
@@ -46,5 +46,6 @@
 
 .flex-img-child {
     max-width: 100%;
+    max-height: 250px;
 }
 
