--- a/src/app/serenazgo/usuarios/list-users/list-users.component.html
+++ b/src/app/serenazgo/usuarios/list-users/list-users.component.html
@@ -1,1 +1,65 @@
-<p>list-users works!</p>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Lista de usuarios</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <mat-form-field style="width: 100%;">
+            <mat-label>Buscar usuario</mat-label>
+            <input (keyup)="applyFilter($event)" matInput placeholder="Ingrese nombre o apellido">
+        </mat-form-field>
+        <table mat-table [dataSource]="dataSource" matSort>
+
+            <!-- Nombres -->
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombres</th>
+                <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
+            </ng-container>
+
+            <!-- Apellidos -->
+            <ng-container matColumnDef="apellido">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Apellidos</th>
+                <td mat-cell *matCellDef="let element">{{ element.apellido }}</td>
+            </ng-container>
+
+            <!-- Edad -->
+            <ng-container matColumnDef="nacimiento">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Edad</th>
+                <td mat-cell *matCellDef="let element">{{ element.nacimiento | userAge }}</td>
+            </ng-container>
+
+            <!-- Sexo -->
+            <ng-container matColumnDef="sexo">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Género</th>
+                <td mat-cell *matCellDef="let element">{{ element.sexo | titlecase }}</td>
+            </ng-container>
+
+            <!-- Tipo de usuario -->
+            <ng-container matColumnDef="fk_tipo_us">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de usuario</th>
+                <td mat-cell *matCellDef="let element">{{ element.fk_tipo_us | userTipouser }}</td>
+            </ng-container>
+
+            <!-- Foto -->
+            <ng-container matColumnDef="foto">
+                <th mat-header-cell *matHeaderCellDef>Imagen</th>
+                <td mat-cell *matCellDef="let element">
+                    <img class="imgsereno" [src]="element.foto ? 'assets/users/'+element.foto : 'assets/users/user.png'">
+                </td>
+            </ng-container>
+
+            <!-- Botones -->
+            <ng-container matColumnDef="iconos">
+                <th mat-header-cell *matHeaderCellDef>Acción</th>
+                <td mat-cell *matCellDef="let element; let i = index">
+                    <button (click)="sendId(element.id_usuario)" *ngIf="element.estado" mat-icon-button
+                        matTooltip="Editar"><mat-icon>edit</mat-icon></button>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnas"></tr>  
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[10, 20, 30]"></mat-paginator>
+    </mat-card-content>
+</mat-card>
