--- a/src/app/serenazgo/usuarios/edit-user/edit-user.component.html
+++ b/src/app/serenazgo/usuarios/edit-user/edit-user.component.html
@@ -1,1 +1,95 @@
-<p>edit-user works!</p>
+<mat-card class="mat-card">
+    <mat-card-header>
+        <mat-card-title>Datos Personales</mat-card-title>
+    </mat-card-header>
+    <mat-card-content class="flex">
+
+        <!-- Dni -->
+        <mat-form-field class="flex-child">
+            <mat-label>Dni</mat-label>
+            <input matInput placeholder="Dni">
+            <mat-icon matSuffix>contact_mail</mat-icon>
+        </mat-form-field>
+
+        <!-- Nombre -->
+        <mat-form-field class="flex-child">
+            <mat-label>Nombre</mat-label>
+            <input matInput placeholder="Nombre">
+            <mat-icon matSuffix>person</mat-icon>
+        </mat-form-field>
+
+        <!-- Apellidos -->
+        <mat-form-field class="flex-child">
+            <mat-label>Apellidos</mat-label>
+            <input matInput placeholder="Apellidos">
+            <mat-icon matSuffix>person</mat-icon>
+        </mat-form-field>
+
+        <!-- Correo -->
+        <mat-form-field class="flex-child">
+            <mat-label>Correo</mat-label>
+            <input matInput placeholder="Correo">
+            <mat-icon matSuffix>alternate_email</mat-icon>
+        </mat-form-field>
+
+        <!-- Nacimiento -->
+        <mat-form-field class="flex-child">
+            <mat-label>Fecha de nacimiento</mat-label>
+            <input matInput [matDatepicker]="picker">
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+
+        <!-- Contraseña 1 -->
+        <mat-form-field class="flex-child">
+            <mat-label>Ingrese contraseña</mat-label>
+            <input matInput type="password">
+            <mat-icon matSuffix>lock</mat-icon>
+        </mat-form-field>
+
+        <!-- Contraseña 2 -->
+        <mat-form-field class="flex-child">
+            <mat-label>Repita contrasena</mat-label>
+            <input matInput type="password">
+            <mat-icon matSuffix>lock</mat-icon>
+        </mat-form-field>
+
+        <!-- Dirección -->
+        <mat-form-field class="flex-child">
+            <mat-label>Domicilio</mat-label>
+            <input matInput placeholder="Domicilio">
+            <mat-icon matSuffix>home</mat-icon>
+        </mat-form-field>
+
+
+        <!-- Telefono -->
+        <mat-form-field class="flex-child">
+            <mat-label>Celular</mat-label>
+            <input matInput placeholder="Celular">
+            <mat-icon matSuffix>call</mat-icon>
+        </mat-form-field>
+
+        <!-- Genero -->
+        <div class="div-up-radio">
+            <label>Género</label>
+            <mat-radio-group class="up-radio">
+                <mat-radio-button value="0">Masculino</mat-radio-button>
+                <mat-radio-button value="1">Femenino</mat-radio-button>
+            </mat-radio-group>
+        </div>
+
+        <!-- Tipo de usuario -->
+        <div class="div-up-radio">
+            <label>Tipo de usuario</label>
+            <mat-radio-group class="up-radio">
+                <mat-radio-button value="0">Administrador</mat-radio-button>
+                <mat-radio-button value="1">Operador</mat-radio-button>
+            </mat-radio-group>
+        </div>
+
+
+    </mat-card-content>
+    <mat-card-actions align="end">
+        <button mat-raised-button color="accent" mat-button type="submit">Guardar</button>
+    </mat-card-actions>
+</mat-card>
