user form validations

--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -13,8 +13,7 @@
 .body-2 {
   margin-bottom: 0;
   height: 100vh;
-  /* background-image: url("src/assets/olas.svg"); */
-  background-image: url("src/assets/olas.svg");
+  background-image: url("/assets/olas.svg");
   background-size: contain;
   background-position-x: center;
   background-position-y: bottom;
