--- a/src/app/serenazgo/unidad/lista-unidad/lista-unidad.component.html
+++ b/src/app/serenazgo/unidad/lista-unidad/lista-unidad.component.html
@@ -14,7 +14,7 @@
       <mat-card-subtitle *ngIf="unid.fk_tipo_unidad === 4">Camión</mat-card-subtitle>
     </mat-card-header>
 
-    <img mat-card-image src="../../../../assets/unidades/default.jpg" />
+    <img mat-card-image src="assets/unidades/default.jpg" />
 
     <mat-card-content>
       <p>
