--- a/src/app/serenazgo/usuarios/home/home.component.html
+++ b/src/app/serenazgo/usuarios/home/home.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar class="mat-flex">
         <span>Usuarios del sistema</span>
         <span>
-            <button *ngIf="badge" matTooltip="Crear usuario" mat-raised-button color="primary" routerLink="">
+            <button *ngIf="badge" matTooltip="Crear usuario" mat-raised-button color="primary" routerLink="/serenazgo/usuarios/newuser">
                 <mat-icon>person_add</mat-icon> NUEVO
             </button>
         </span>
