--- a/src/app/serenazgo/usuarios/new-usuario/new-usuario.component.css
+++ b/src/app/serenazgo/usuarios/new-usuario/new-usuario.component.css
@@ -1,6 +1,6 @@
 .flex {
     display: flex;
-    flex-direction: row;
+    flex: row;
     flex-wrap: wrap;
     justify-content: flex-start;
 }
@@ -10,15 +10,16 @@
     margin-right: 9px;
 }
 
-.div-up-radio {
+.radio-group-container {
     width: 50%;
 }
 
-.up-radio {
+.radio-group {
     width: 100%;
     display: flex;
     flex-direction: column;
 }
+
 
 
 
@@ -44,7 +45,7 @@
 
 
 @media screen and (min-width: 1201px) {
-    .mat-card {
-        margin: 0 15vw;
+    .mat-card { 
+        margin: 0 18vw;
     }
 }
