--- a/src/app/serenazgo/usuarios/new-usuario/new-usuario.component.html
+++ b/src/app/serenazgo/usuarios/new-usuario/new-usuario.component.html
@@ -5,7 +5,19 @@
         </mat-card-header>
         <mat-card-content class="flex">
 
-
+            <!-- Dni -->
+            <mat-form-field class="flex-child">
+                <mat-label>Dni</mat-label>
+                <input matInput placeholder="Dni" formControlName="dni">
+                <mat-icon matSuffix>contact_mail</mat-icon>
+                <mat-error
+                    *ngIf="formulario.controls['dni'].errors?.['minlength']?.['actualLength'] && formulario.controls['dni'].touched">
+                    El Dni debe tener 8 dígitos</mat-error>
+                <mat-error *ngIf="formulario.controls['dni'].errors?.['dniExists']">Dni ya existe</mat-error>
+                <mat-error
+                    *ngIf="formulario.controls['dni'].errors?.['required'] && formulario.controls['dni'].touched">Dni es
+                    obligatorio</mat-error>
+            </mat-form-field>
 
             <!-- Nombre -->
             <mat-form-field class="flex-child">
@@ -50,16 +62,7 @@
                 <mat-icon matSuffix>call</mat-icon>
             </mat-form-field>
 
-            <!-- Dni -->
-            <mat-form-field class="flex-child">
-                <mat-label>Dni</mat-label>
-                <input matInput placeholder="Dni" formControlName="dni">
-                <mat-icon matSuffix>contact_mail</mat-icon>
-                <mat-error
-                    *ngIf="formulario.controls['dni'].invalid && (formulario.controls['dni'].dirty || formulario.controls['dni'].touched)">
-                    El DNI debe tener 8 dígitos.
-                </mat-error>
-            </mat-form-field>
+
 
 
             <!-- Contraseña 1 -->
@@ -77,16 +80,19 @@
             <mat-form-field class="flex-child">
                 <mat-label>Repita contrasena</mat-label>
                 <input matInput type="password" formControlName="passRepeat">
-                <mat-error *ngIf="                     
+                <!-- <mat-error *ngIf="                     
                             formulario.controls['passRepeat'].dirty || 
                             formulario.controls['passRepeat'].touched ||
                             formulario.controls['passRepeat'].errors?.['mismatch'] 
                         ">
                     Contraseñas no coinciden
+                </mat-error> -->
+                <mat-error
+                    *ngIf="formulario.get('passRepeat')?.touched && formulario.hasError('dontMatch', 'passRepeat')">
+                    Contraseñas no coinciden
                 </mat-error>
                 <mat-icon matSuffix>lock</mat-icon>
             </mat-form-field>
-            <!-- formulario.controls['passRepeat'].invalid -->
 
             <!-- Genero -->
             <div class="radio-group-container">
