--- a/src/app/serenazgo/denuncia/listado-denuncias/listado-denuncias.component.html
+++ b/src/app/serenazgo/denuncia/listado-denuncias/listado-denuncias.component.html
@@ -1,38 +1,55 @@
 <mat-card>
-    <mat-card-header>
+    <mat-card-header class="flex-mat-card-header">
         <mat-card-title>Denuncias</mat-card-title>
+        <div class="div-button">
+            <button matTooltip="Registrar denuncia" mat-raised-button color="primary"
+                routerLink="/serenazgo/denuncia/registrar">
+                <mat-icon>person_add</mat-icon> NUEVO
+            </button>
+        </div>
     </mat-card-header>
     <mat-card-content>
-        <table mat-table [dataSource]="data" >
+        <mat-form-field style="width: 100%;">
+            <mat-label> Buscar por fecha </mat-label>
+            <input (keyup)="applyFilter($event)" matInput placeholder="DD-MM-AA">
+        </mat-form-field>
 
-            <!-- Id -->
-            <ng-container matColumnDef="id_denuncia">
-                <th mat-header-cell *matHeaderCellDef>Código</th>
-                <td mat-cell *matCellDef="let element">{{element.id_denuncia}}</td>
-            </ng-container>
+        <div *ngIf="isLoadingResults" class="div-spinner">
+            <mat-spinner></mat-spinner>
+        </div>
 
-            <!-- Fecha -->
-            <ng-container matColumnDef="fecha">
-                <th mat-header-cell *matHeaderCellDef>Fecha</th>
-                <td mat-cell *matCellDef="let element">{{element.fecha | date}}</td>
-            </ng-container>
+        <div *ngIf="!isLoadingResults">
+            <table mat-table [dataSource]="data">
 
-            <!-- Hora -->
-            <ng-container matColumnDef="hora">
-                <th mat-header-cell *matHeaderCellDef>Hora</th>
-                <td mat-cell *matCellDef="let element">{{element.hora | horaDenuncia}}</td>
-            </ng-container>
+                <!-- Id -->
+                <ng-container matColumnDef="id_denuncia">
+                    <th mat-header-cell *matHeaderCellDef>Código</th>
+                    <td mat-cell *matCellDef="let element">{{element.id_denuncia}}</td>
+                </ng-container>
 
-            <!-- Delito -->
-            <ng-container matColumnDef="delito">
-                <th mat-header-cell *matHeaderCellDef>Delito</th>
-                <td mat-cell *matCellDef="let element">{{element.delito}}</td>
-            </ng-container>
+                <!-- Fecha -->
+                <ng-container matColumnDef="fecha">
+                    <th mat-header-cell *matHeaderCellDef>Fecha</th>
+                    <td mat-cell *matCellDef="let element">{{element.fecha | date}}</td>
+                </ng-container>
+
+                <!-- Hora -->
+                <ng-container matColumnDef="hora">
+                    <th mat-header-cell *matHeaderCellDef>Hora</th>
+                    <td mat-cell *matCellDef="let element">{{element.hora | horaDenuncia}}</td>
+                </ng-container>
+
+                <!-- Delito -->
+                <ng-container matColumnDef="delito">
+                    <th mat-header-cell *matHeaderCellDef>Delito</th>
+                    <td mat-cell *matCellDef="let element">{{element.delito}}</td>
+                </ng-container>
 
 
-            <tr mat-header-row *matHeaderRowDef="columnas"></tr>
-            <tr mat-row *matRowDef="let row; columns: columnas"></tr>
-        </table>
-        <mat-paginator [pageSize]="5" #paginator [length]="resultsLength"></mat-paginator>
+                <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+                <tr mat-row *matRowDef="let row; columns: columnas"></tr>
+            </table>
+        </div>
+        <mat-paginator pageSize="{{pageSize}}" [length]="resultsLength" [disabled]="enablePagination"></mat-paginator>
     </mat-card-content>
 </mat-card>
