--- a/src/app/serenazgo/denuncia/registrar-denuncia/registrar-denuncia.component.html
+++ b/src/app/serenazgo/denuncia/registrar-denuncia/registrar-denuncia.component.html
@@ -3,63 +3,77 @@
         <mat-card-title>Registrar nueva denuncia</mat-card-title>
         <mat-card-subtitle>Formulario</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content>
+    <form>
+        <mat-card-content >
 
-        <!-- Fecha -->
-        <mat-form-field>
-            <mat-label>Fecha</mat-label>
-            <input matInput placeholder="Fecha">
-        </mat-form-field>
+            <div class="flex-group-a">
+                <!-- Fecha -->
+                <mat-form-field appearance="fill" class="flex-child-a">
+                    <mat-label>Fecha</mat-label>
+                    <input matInput [matDatepicker]="dp" [formControl]="date">
+                    <mat-hint>MM/DD/YYYY</mat-hint>
+                    <mat-datepicker-toggle matIconSuffix [for]="dp"></mat-datepicker-toggle>
+                    <mat-datepicker #dp></mat-datepicker>
+                </mat-form-field>
 
-        <!-- Delito -->
-        <mat-form-field>
-            <mat-label>Delito</mat-label>
-            <mat-select>
-                <mat-option>-- Ninguno --</mat-option>
-                <mat-optgroup *ngFor="let grupo of grupos_delitos" [label]="grupo.tipo_delito">
-                    <mat-option *ngFor="let delito of grupo.delito" [value]="delito.id">{{delito.nombre}}</mat-option>
-                </mat-optgroup>
-            </mat-select>
-        </mat-form-field>
+                <!-- Delito -->
+                <mat-form-field class="flex-child-a" id="delito-flex-child-a">
+                    <mat-label>Delito</mat-label>
+                    <mat-select>
+                        <mat-option>-- Ninguno --</mat-option>
+                        <mat-optgroup *ngFor="let grupo of grupos_delitos" [label]="grupo.tipo_delito">
+                            <mat-option *ngFor="let delito of grupo.delito"
+                                [value]="delito.id">{{delito.nombre}}</mat-option>
+                        </mat-optgroup>
+                    </mat-select>
+                </mat-form-field>
 
-        <!-- Detalles -->
-        <mat-form-field>
-            <mat-label>Detalles</mat-label>
-            <input matInput #message maxlength="256" placeholder="Detalles de la denuncia (opcional)">
-            <mat-hint align="end">{{message.value.length}} / 256</mat-hint>
-        </mat-form-field>
+                <!-- Denunciante -->
+                <mat-form-field class="flex-child-a">
+                    <mat-label>Dni del agraviado</mat-label>
+                    <input matInput placeholder="Opcional">
+                </mat-form-field>
 
-        <!-- Direccion -->
-        <mat-form-field>
-            <mat-label>Direccion</mat-label>
-            <input matInput placeholder="Ej: calle san jose 204">
-        </mat-form-field>
+                <!-- Nombre y/o apellidos -->
+                <mat-form-field class="flex-child-a">
+                    <mat-label>Nombres y apellidos</mat-label>
+                    <input matInput placeholder="Opcional">
+                </mat-form-field>
+            </div>
 
-        <!-- Denunciante -->
-        <mat-form-field>
-            <mat-label>Dni del agraviado</mat-label>
-            <input matInput placeholder="Opcional">
-        </mat-form-field>
+            <!-- Detalles -->
+            <div class="flex-group-b">
+                <mat-form-field id="child-flex-group-b">
+                    <mat-label>Detalles</mat-label>
+                    <textarea matInput #message maxlength="256"
+                        placeholder="Detalles de la denuncia (opcional)"></textarea>
+                    <mat-hint align="end">{{message.value.length}} / 256</mat-hint>
+                </mat-form-field>
+            </div>
 
-        <!-- Lat -->
-        <input type="hidden">
+            <!-- Direccion --> 
+            <div class="flex-group-c">
+                <mat-form-field id="child-flex-group-c">
+                    <mat-label>Direccion</mat-label>
+                    <input id="pac-input" matInput placeholder="Ej: calle san jose 204">  
+                </mat-form-field>
+            </div>
 
-        <!-- Lng -->
-        <input type="hidden">
+            <!-- Lat -->
+            <input type="hidden" [value]="lat">
 
-        <!-- mapa -->
-        <!-- google-maps-demo.component.html -->
-        <google-map height="400px" width="750px" [center]="center" [zoom]="zoom" (mapClick)="moveMap($event)"
-            (mapMousemove)="move($event)">
-        </google-map>
+            <!-- Lng -->
+            <input type="hidden" [value]="lng">
 
-        <div>Latitude: {{display?.lat}}</div>
-        <div>Longitude: {{display?.lng}}</div>
+            <div id="map"></div>
 
-    </mat-card-content>
-    <mat-card-actions align="end">
-        <button type="button" [routerLink]="['/serenazgo/denuncia/listado']" mat-raised-button
-            style="margin-right: 8px;">Cancelar</button>
-        <button mat-raised-button color="primary" type="submit">Siguiente</button>
-    </mat-card-actions>
+
+        </mat-card-content>
+
+        <mat-card-actions align="end">
+            <button type="button" [routerLink]="['/serenazgo/denuncia/listado']" mat-raised-button
+                style="margin-right: 8px;">Cancelar</button>
+            <button mat-raised-button color="primary" type="submit">Siguiente</button>
+        </mat-card-actions>
+    </form>
 </mat-card>
