--- a/src/app/serenazgo/denuncia/registrar-denuncia/registrar-denuncia.component.css
+++ b/src/app/serenazgo/denuncia/registrar-denuncia/registrar-denuncia.component.css
@@ -38,6 +38,7 @@
     width: 70vw;
 }
 
+/* s */
 @media screen and (max-width: 600px) {
     .flex-child-a {
         flex-grow: 1
@@ -49,15 +50,18 @@
     }
 }
 
+/* m */
 @media screen and (min-width: 601px) and (max-width: 992px) {
     .flex-child-a {
         flex-grow: 1
     }
 }
 
+/* l */
 @media screen and (min-width: 993px) and (max-width: 1200px) {}
 
-@media screen and (min-width: 1201px) {
+/* xl */
+@media (min-width: 1201px) {
     #map {
         height: 500px;
         width: 94vw;
