--- a/src/app/serenazgo/home/home.component.html
+++ b/src/app/serenazgo/home/home.component.html
@@ -18,12 +18,15 @@
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
       fixedTopGap="56" >
       <mat-nav-list style="margin-right: 5vw;">
-        <a mat-list-item routerLink="/serenazgo/denuncia/listado"><fa-icon [icon]="faUserLock" size="lg"></fa-icon> Denuncias</a>
         <a mat-list-item routerLink="/serenazgo/unidades/list"><fa-icon [icon]="faCarSide" size="lg"></fa-icon> Unidad</a>
         <a mat-list-item routerLink="/serenazgo/serenos"><fa-icon [icon]="faPersonMilitaryPointing" size="lg"></fa-icon> Serenos</a>
         <a mat-list-item routerLink="/serenazgo/grupos/listado"><fa-icon [icon]="faPeopleGroup" size="lg"></fa-icon> Grupos</a>
         <!-- Item Gestión de usuarios (solo visible para usuario root y administrador) -->  
+        <a *ngIf="permissionsUser" mat-list-item routerLink="/serenazgo/denuncia/listado"><fa-icon [icon]="faUserLock" size="lg"></fa-icon> Denuncias</a>
         <a *ngIf="permissionsUser" mat-list-item routerLink="/serenazgo/usuarios/home"><fa-icon [icon]="faUsersGear" size="lg"></fa-icon> Usuarios</a>
+
+        <!-- Solo para serenos -->
+        <a *ngIf="permissionsSereno"  mat-list-item routerLink="/serenazgo/rutas"><fa-icon [icon]="faRoute" size="lg" ></fa-icon> Mis rutas</a>
       </mat-nav-list>
     </mat-sidenav>
 
