--- a/src/app/serenazgo/usuarios/list-users/list-users.component.html
+++ b/src/app/serenazgo/usuarios/list-users/list-users.component.html
@@ -43,7 +43,8 @@
             <ng-container matColumnDef="foto">
                 <th mat-header-cell *matHeaderCellDef>Imagen</th>
                 <td mat-cell *matCellDef="let element">
-                    <img class="imgsereno" [src]="element.foto ? 'assets/users/'+element.foto : 'assets/users/user.png'">
+                    <img class="imgsereno"
+                        [src]="element.foto ? 'assets/users/'+element.foto : 'assets/users/user.png'">
                 </td>
             </ng-container>
 
@@ -51,13 +52,16 @@
             <ng-container matColumnDef="iconos">
                 <th mat-header-cell *matHeaderCellDef>Acción</th>
                 <td mat-cell *matCellDef="let element; let i = index">
-                    <button (click)="sendId(element.id_usuario)" routerLink="/serenazgo/usuarios/edituser" *ngIf="element.estado"
-                        mat-icon-button matTooltip="Editar"><mat-icon>edit</mat-icon></button>
+                    <button (click)="sendId(element.id_usuario)" routerLink="/serenazgo/usuarios/edituser" *ngIf="
+                            (myTypeUser === 1 &&  (element.fk_tipo_us === 2 || element.fk_tipo_us === 3)) ||
+                            (myTypeUser === 2 && element.fk_tipo_us === 3 )                            
+                        " mat-icon-button matTooltip="Editar"><mat-icon>edit</mat-icon></button>
+                    <!-- {{ myTypeUser }} - {{element.fk_tipo_us }} -->
                 </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="columnas"></tr>
-            <tr mat-row *matRowDef="let row; columns: columnas"></tr>  
+            <tr mat-row *matRowDef="let row; columns: columnas"></tr>
         </table>
 
         <mat-paginator [pageSizeOptions]="[10, 20, 30]"></mat-paginator>
