Refactor CSS and HTML in miruta component, add geolocation functionality

--- a/src/app/serenazgo/rutas/miruta/miruta.component.html
+++ b/src/app/serenazgo/rutas/miruta/miruta.component.html
@@ -1,4 +1,4 @@
-<div class="flex-father">
+<div class="flex-father-1">
     <span>
         <button mat-fab matTooltip="Mi ubicación" color="primary">
             <mat-icon>location_on</mat-icon>
@@ -6,6 +6,26 @@
     </span>
 </div>
 
-<div>
-    <h1>mapa here</h1>
+<div class="flex-father-2">
+    <div>
+
+        <h2>Coordenadas: </h2>
+        <h3>{{infoPos?.coords?.latitude}}, {{infoPos?.coords?.latitude}}</h3>
+        <br>
+
+        <h2>Fecha y hora: </h2>
+        <h3>{{infoPos?.timestamp | date:'dd/MM/yyyy hh:mm:ss'}}</h3>
+        <br>
+
+        <h2>Resto de información</h2>
+        accuracy: <h3>{{infoPos?.coords?.accuracy }} </h3>
+        altitude: <h3>{{infoPos?.coords?.altitude }} </h3>
+        altitudeAccuracy: <h3>{{infoPos?.coords?.altitudeAccuracy }} </h3>
+        heading: <h3>{{infoPos?.coords?.heading }} </h3>
+        speed:<h3>{{infoPos?.coords?.speed }} </h3>
+
+    </div>
+
+
+
 </div>
