--- a/src/app/serenazgo/rutas/miruta/miruta.component.css
+++ b/src/app/serenazgo/rutas/miruta/miruta.component.css
@@ -1,8 +1,15 @@
-.flex-father{
+.flex-father-1{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-end;
+}
+
+.flex-father-2{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
 }
 
 span {
