Fix map display and update location

--- a/src/app/serenazgo/rutas/miruta/miruta.component.html
+++ b/src/app/serenazgo/rutas/miruta/miruta.component.html
@@ -1,20 +1,12 @@
 <div class="flex-father-1">
     <span>
-        <button mat-fab matTooltip="Mi ubicación" color="primary">
-            <mat-icon>location_on</mat-icon>
+        <button (click)="updateUbication()" mat-fab matTooltip="Mi ubicación" color="primary">
+            <mat-icon>refresh</mat-icon>
         </button>
     </span>
 </div>
 
 
 <div class="flex-father-2">
-
-    <div>
-
-
-
-    </div>
-
-
-
+    <div id="map"></div>
 </div>
