--- a/src/app/serenazgo/rutas/miruta/miruta.component.css
+++ b/src/app/serenazgo/rutas/miruta/miruta.component.css
@@ -1,11 +1,11 @@
-.flex-father-1{
+.flex-father-1 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-end;
 }
 
-.flex-father-2{
+.flex-father-2 {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -14,7 +14,11 @@
 
 span {
     margin-right: 15px;
-    margin-top: 15px;    
+    margin-top: 15px;
+    margin-bottom: 10px;
 }
 
-
+#map {
+    height: 600px;
+    width: 92vw;
+}
