Update dialog-ubication.component.html and miruta.component.ts

--- a/src/app/serenazgo/rutas/miruta/dialog-ubication/dialog-ubication.component.html
+++ b/src/app/serenazgo/rutas/miruta/dialog-ubication/dialog-ubication.component.html
@@ -6,6 +6,9 @@
         <img src="./assets/dialog-ubication.png">
     </div>
 
+    <a mat-button target="_blank" href="https://github.com/diegocruzne/front_sereno/blob/main/politicas.md">Términos y condiciones</a>
+
+
 </div>
 <!-- <div mat-dialog-actions align="end">
     <button mat-raised-button color="primary" [mat-dialog-close]="true" cdkFocusInitial>Cerrar</button>
