--- a/src/app/serenazgo/serenos/list-serenos/list-serenos.component.html
+++ b/src/app/serenazgo/serenos/list-serenos/list-serenos.component.html
@@ -40,7 +40,7 @@
         </td>
       </ng-container>
 
-      <!-- Column -->
+      <!-- Tiene grupo -->
       <ng-container matColumnDef="fk_patrullaje">
         <th mat-header-cell *matHeaderCellDef>Tiene grupo</th>
         <td mat-cell *matCellDef="let element" >
@@ -52,7 +52,7 @@
         </td>
       </ng-container>
 
-      <!-- Column -->
+      <!-- Acción -->
       <ng-container matColumnDef="iconos">
         <th mat-header-cell *matHeaderCellDef>Acción</th>
         <td mat-cell *matCellDef="let element; let i = index">
