--- a/src/app/serenazgo/denuncia/listado-denuncias/listado-denuncias.component.html
+++ b/src/app/serenazgo/denuncia/listado-denuncias/listado-denuncias.component.html
@@ -45,6 +45,17 @@
                     <td mat-cell *matCellDef="let element">{{element.delito}}</td>
                 </ng-container>
 
+                <!-- Estado -->
+                <ng-container matColumnDef="estado">
+                    <th mat-header-cell *matHeaderCellDef>Estado</th>
+                    <td mat-cell *matCellDef="let element;">
+                        <button *ngIf="element.estado === 'ingresado'" mat-icon-button color="warn" matTooltip="Ingresar patrullaje"><mat-icon>warning</mat-icon></button>
+                        <button *ngIf="element.estado === 'en grupo'" mat-icon-button color="accent" matTooltip="Finalizar denuncia"><mat-icon>edit</mat-icon></button>
+                        <button *ngIf="element.estado === 'atendido'" mat-icon-button color="primary" matTooltip="Ver detalles"><mat-icon>visibility</mat-icon></button>
+                    </td>
+                </ng-container>
+
+
 
                 <tr mat-header-row *matHeaderRowDef="columnas"></tr>
                 <tr mat-row *matRowDef="let row; columns: columnas"></tr>
